[metadata]
name = pymodsim
author = Arslan Ali Syed
author-email = arslan.syed@tum.de
summary = OpenStack's setup automation in a reusable form
description-file = README.md
license = LGPL-3.0
requires-python = >=3.7
classifier =
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages =
    pymodsim
    pymodsim.router
    pymodsim.general
    pymodsim.simulator
    pymodsim.data_readers
data_files =
    pymodsim = pymodsim/settings.toml
